--- a/HTML_boilerplate/css/style.css
+++ b/HTML_boilerplate/css/style.css
@@ -125,5 +125,24 @@ ol {
 }
 
 .home {
-    margin-left: 220px;
+    margin-left: 335px;
+}
+
+.mochi {
+    width: 100px;
+    height: auto;
+}
+.mochi2 {
+    width: 300px;
+    height: auto;
+}
+
+.mochi_eg li {
+    display: inline-block;
+}
+#cute {
+    font-size: 100px;
+    font-style: oblique;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: red;
 }
